Closed Bug 1318971 Opened 8 years ago Closed 8 years ago

Type mismatch in ContentParent::RecvPSpeechSynthesisConstructor when MOZ_WEBSPEECH is not defined

Categories

(Core :: IPC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: arai, Assigned: arai)

References

Details

Attachments

(1 file)

http://searchfox.org/mozilla-central/rev/935627b015aaabbd2dffa90cce051521f22dd7e6/dom/ipc/ContentParent.cpp#3125-3127
> mozilla::ipc::IPCResult
> ContentParent::RecvPSpeechSynthesisConstructor(PSpeechSynthesisParent* aActor)
> {
> #ifdef MOZ_WEBSPEECH
>   return IPC_OK();
> #else
>   return false;
> #endif
> }

the #else part should be updated to |IPC_FAIL_NO_REASON(this);| or something.
mozilla/dom/ipc/ContentParent.cpp:3147:10: error: could not convert ‘false’ from ‘bool’ to ‘mozilla::ipc::IPCResult’
with gcc 5 on linux, when --disable-webspeech set in mozconfig
Just replaced false with |IPC_FAIL_NO_REASON(this)|, that seems to be the value for error case.
Assignee: nobody → arai.unmht
Status: NEW → ASSIGNED
Attachment #8812634 - Flags: review?(kchen)
Attachment #8812634 - Flags: review?(kchen) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/578dfd6dba5e20d87b7642acef8d093d8be8e268
Bug 1318971 - Update !MOZ_WEBSPEECH case in ContentParent::RecvPSpeechSynthesisConstructor to return mozilla::ipc::IPCResult. r=kanru
https://hg.mozilla.org/mozilla-central/rev/578dfd6dba5e
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: